# discord-reacji-channeler

./: .dockerignore  .gitignore  Dockerfile  Procfile  entrypoint.sh  fly.toml  pyproject.toml  reacji-channeler-bot.py  readme.md  requirements.txt  start.sh
cogs/: reactionchannelercog.py
cogs/modules/: reactionchannel.py  settings.py
cogs/modules/files/: .env.sample
