[tool.poetry]
name = "discord-reacji-channeler"
version = "0.2.0"
description = "ABC"
authors = ["tetsuya-ki <64536338+tetsuya-ki@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.0"
python-dotenv = "^0.20.0"
certifi = "^2024.12.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
